Configure JVM arguments for test cases to address compatibility issues with JDK 17